<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.HelpActivity"
    android:background="@color/grey_5">

    <include layout="@layout/action_bar" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:scrollingCache="true"
        android:layout_marginTop="@dimen/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/colorAccent"
                app:cardCornerRadius="15dp"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/spacing_xmlarge"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageButton
                            android:layout_width="@dimen/spacing_xmlarge"
                            android:layout_height="@dimen/spacing_xmlarge"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            app:srcCompat="@drawable/ic_baseline_help_outline"
                            android:clickable="false"
                            android:layout_marginTop="5dp"
                            app:tint="@color/light_blue_100" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginTop="5dp"
                            android:gravity="center_vertical"
                            android:text="@string/Faq_title_1"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/white"
                            android:textSize="19sp"
                            app:fontFamily="@font/myfont1" />

                    </LinearLayout>

                    <View
                        android:layout_width="0dp"
                        android:layout_height="5dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Faq_text_1"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/myfont1"
                        android:textSize="18sp"
                        android:textColor="@color/grey_5" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="@dimen/spacing_large" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/colorAccent"
                app:cardCornerRadius="15dp"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/spacing_xmlarge"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageButton
                            android:layout_width="@dimen/spacing_xmlarge"
                            android:layout_height="@dimen/spacing_xmlarge"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            app:srcCompat="@drawable/ic_baseline_help_outline"
                            android:clickable="false"
                            android:layout_marginTop="5dp"
                            app:tint="@color/light_blue_100" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginTop="5dp"
                            android:gravity="center_vertical"
                            android:text="@string/Faq_title_2"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/white"
                            android:textSize="19sp"
                            app:fontFamily="@font/myfont1" />

                    </LinearLayout>

                    <View
                        android:layout_width="0dp"
                        android:layout_height="5dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Faq_text_2"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/myfont1"
                        android:textSize="18sp"
                        android:textColor="@color/grey_5" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="@dimen/spacing_large" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/colorAccent"
                app:cardCornerRadius="15dp"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/spacing_xmlarge"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageButton
                            android:layout_width="@dimen/spacing_xmlarge"
                            android:layout_height="@dimen/spacing_xmlarge"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            app:srcCompat="@drawable/ic_baseline_help_outline"
                            android:clickable="false"
                            android:layout_marginTop="5dp"
                            app:tint="@color/light_blue_100" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginTop="5dp"
                            android:gravity="center_vertical"
                            android:text="@string/Faq_title_3"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/white"
                            android:textSize="19sp"
                            app:fontFamily="@font/myfont1" />

                    </LinearLayout>

                    <View
                        android:layout_width="0dp"
                        android:layout_height="5dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Faq_text_3"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/myfont1"
                        android:textSize="18sp"
                        android:textColor="@color/grey_5" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="@dimen/spacing_large" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/colorAccent"
                app:cardCornerRadius="15dp"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/spacing_xmlarge"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageButton
                            android:layout_width="@dimen/spacing_xmlarge"
                            android:layout_height="@dimen/spacing_xmlarge"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            app:srcCompat="@drawable/ic_baseline_help_outline"
                            android:clickable="false"
                            android:layout_marginTop="5dp"
                            app:tint="@color/light_blue_100" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginTop="5dp"
                            android:gravity="center_vertical"
                            android:text="@string/Faq_title_4"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/white"
                            android:textSize="19sp"
                            app:fontFamily="@font/myfont1" />

                    </LinearLayout>

                    <View
                        android:layout_width="0dp"
                        android:layout_height="5dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Faq_text_4"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/myfont1"
                        android:textSize="18sp"
                        android:textColor="@color/grey_5" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="@dimen/spacing_large" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/colorAccent"
                app:cardCornerRadius="15dp"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/spacing_xmlarge"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageButton
                            android:layout_width="@dimen/spacing_xmlarge"
                            android:layout_height="@dimen/spacing_xmlarge"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            app:srcCompat="@drawable/ic_baseline_help_outline"
                            android:clickable="false"
                            android:layout_marginTop="5dp"
                            app:tint="@color/light_blue_100" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginTop="5dp"
                            android:gravity="center_vertical"
                            android:text="@string/Faq_title_5"
                            android:textColor="@color/white"
                            android:textSize="19sp"
                            app:fontFamily="@font/myfont1" />

                    </LinearLayout>

                    <View
                        android:layout_width="0dp"
                        android:layout_height="5dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Faq_text_5"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/myfont1"
                        android:textSize="18sp"
                        android:textColor="@color/grey_5" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="@dimen/spacing_large" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/colorAccent"
                app:cardCornerRadius="15dp"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/spacing_xmlarge"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <ImageButton
                            android:layout_width="@dimen/spacing_xmlarge"
                            android:layout_height="@dimen/spacing_xmlarge"
                            android:background="?attr/selectableItemBackgroundBorderless"
                            app:srcCompat="@drawable/ic_baseline_help_outline"
                            android:clickable="false"
                            android:layout_marginTop="5dp"
                            app:tint="@color/light_blue_100" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_marginTop="5dp"
                            android:gravity="center_vertical"
                            android:text="@string/Faq_title_6"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                            android:textColor="@color/white"
                            android:textSize="19sp"
                            app:fontFamily="@font/myfont1" />

                    </LinearLayout>

                    <View
                        android:layout_width="0dp"
                        android:layout_height="5dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Faq_text_6"
                        android:layout_marginStart="10dp"
                        android:fontFamily="@font/myfont1"
                        android:textSize="18sp"
                        android:textColor="@color/grey_5" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="@dimen/spacing_large" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</RelativeLayout>