<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_5"
    android:fitsSystemWindows="true"
    tools:context=".activity.PaymentActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <include layout="@layout/action_bar" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:background="@color/grey_20" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_medium"
            android:layout_marginLeft="@dimen/spacing_mlarge"
            android:layout_marginRight="@dimen/spacing_mlarge"
            android:layout_marginTop="@dimen/spacing_middle"
            android:visibility="visible"
            app:cardBackgroundColor="@color/colorAccent"
            app:cardCornerRadius="6dp"
            app:cardElevation="3dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/world_map" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/spacing_mlarge">

                    <ImageView
                        android:id="@+id/card_logo"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="end|right"
                        android:scaleType="centerCrop"
                        android:src="@drawable/bitcoin_logo" />

                    <TextView
                        android:id="@+id/card_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_medium"
                        android:fontFamily="monospace"
                        android:text="Bitcoin"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
                        android:textColor="@android:color/white" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="@dimen/spacing_middle" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="@dimen/spacing_xlarge"
                            android:text="@string/payment_convert"
                            android:textSize="16sp"
                            android:textColor="@color/white"
                            android:gravity="center"
                            android:fontFamily="@font/myfont1"/>

                    </LinearLayout>

                    <View
                        android:layout_width="0dp"
                        android:layout_height="@dimen/spacing_middle" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Method:"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                        android:textColor="@color/grey_10" />

                    <TextView
                        android:id="@+id/payment_method"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="monospace"
                        android:text="Coinbase Wallet"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                        android:textColor="@android:color/white" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="@dimen/spacing_medium" />
                </LinearLayout>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/layoutDots"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="@dimen/spacing_mlarge"
            android:orientation="horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/spacing_large">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/myfont1"
                android:text="@string/payment_alert"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <Button
                android:id="@+id/request_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Send Payments Request"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:background="@color/colorAccent"
                android:fontFamily="@font/myfont1"
                android:layout_marginTop="25dp"/>

        </LinearLayout>

    </LinearLayout>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/admob_banner_id"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>